availabiility label letter spacing, spinner buy rent fix, show play icn bonus episode

--- a/site/styles/_availability-tags.scss
+++ b/site/styles/_availability-tags.scss
@@ -5,7 +5,7 @@ s72-availability-label {
     line-height: 24px;
     @extend .mb-2;
     font-size: 16px;
-    letter-spacing: 0.6px;
+    letter-spacing: 0.4px;
 
     &:before {
       @extend .fa;
